refactor: format whitespace